--- a/Dragon Warrior (NES)/Wiki/Dragon Warrior (NES) - Sub-pages.wikitext
+++ b/Dragon Warrior (NES)/Wiki/Dragon Warrior (NES) - Sub-pages.wikitext
@@ -1,5 +1,4 @@
 ==Sub-pages==
 {{namespaces}}
-
-* [[Dragon Warrior/Music Pointers]]
-* [[Dragon Warrior/Values]]
+{{subpage|Music Pointers}}
+{{subpage|Values}}
