--- a/Yoshi's Cookie (NES)/Wiki/Yoshi's Cookie (NES) - TBL.wikitext
+++ b/Yoshi's Cookie (NES)/Wiki/Yoshi's Cookie (NES) - TBL.wikitext
@@ -83,15 +83,15 @@ The space (<code>&nbsp;</code>) character is $03.
 |  style="background-color:#eaecf0;"  |
 |-
 ! scope="row" |  4_
-|  colspan="16"  style="text-align: center;"  |  ...
+|  colspan="16"  style="text-align: center; background-color: #eaecf0;"  |  ...
 |}
 
-//=== As seen in RAM ===
+<!--=== As seen in RAM ===
 
-//The text table as seen in the RAM viewer of Mesen2.
+The text table as seen in the RAM viewer of Mesen2.
 
-//[[File:Yoshi's Cookie (NES) - Text Table in RAM (EN).png|none]]
-
+[[File:Yoshi's Cookie (NES) - Text Table in RAM (EN).png|none]]
+-->
 === TBL File ===
  
 Download TBL file: <code>[https://raw.githubusercontent.com/TheAnsarya/GameInfo/main/Yoshi's%20Cookie%20(NES)\Wiki\Files\Yoshi's%20Cookie%20(NES)%20(EN).tbl Yoshi's Cookie (NES) (EN).tbl]</code>
